<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/admin_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/SkyBlue">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_login"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/Gray"
            android:textSize="35dp" />

    </LinearLayout>

     <LinearLayout
         android:layout_width="130dp"
         android:layout_height="120dp"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:background="@color/White">

         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/admin_pic"
             android:layout_width="142dp"
             android:layout_height="146dp"
             android:layout_gravity="center"
             android:paddingBottom="20dp"
             android:src="@drawable/ic_user" />

     </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/user_photo"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_user"
            android:background="@color/button_DarkSeaGreen"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:textAlignment="center"
            android:textStyle="bold"
            android:hint="USERNAME OR EMAIL"
            android:background="@color/White"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/password_pic"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_lock"
            android:background="@color/button_DarkSeaGreen"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:textAlignment="center"
            android:textStyle="bold"
            android:hint="PASSWORD"
            android:background="@color/White"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp">

        <android.support.design.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:textSize="25dp"
            android:background="@color/button_DarkSeaGreen"
            android:clickable="true" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="20dp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dont_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dont_have_account"
            android:layout_marginTop="10dp"
            android:textSize="20dp" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing_up"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp" />
    </LinearLayout>


    </LinearLayout>