<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/user_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:gravity="center"
        android:background="@color/BlueViolet"
        android:text="@string/login"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/button_DarkSeaGreen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/photo">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/user_pic"
            android:layout_width="142dp"
            android:layout_height="146dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="120dp"
            android:src="@drawable/ic_user" />


          <android.support.v7.widget.AppCompatTextView
              android:id="@+id/sign_in"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/White"
              android:textStyle="bold"
              android:layout_gravity="center"
              android:text="Sign In"
              android:textSize="30dp"
              android:layout_marginTop="15dp"
              android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/user_photo"
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_user"
                android:background="@color/button_DarkSeaGreen"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill"
                android:textAlignment="center"
                android:textStyle="bold"
                android:hint="USERNAME OR EMAIL"
                android:background="@color/White"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/lock_password"
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_lock"
                android:background="@color/button_DarkSeaGreen"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill"
                android:textAlignment="center"
                android:textStyle="bold"
                android:hint="PASSWORD"
                android:background="@color/White" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/user_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/White"
                android:textSize="25dp"
                android:background="@color/button_DarkSeaGreen"
                android:clickable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10sp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/White" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_dont_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dont_have_account"
                android:textSize="20dp"
                android:textColor="@color/White"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sing_up"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textColor="@color/White" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>